# github-stars-visualizer

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml
client/: README.md  package-lock.json  package.json
client/src/: App.js  index.css
client/src/components/: contact.js  explore.js  header.js  landingPage.js
server/: Dockerfile  README.md  main.py  pyproject.toml
server/app/: __init__.py  main.py  repo_stars.py  repo_visuals.py
