[tool.poetry]
name = "github-stars-visualizer"
version = "0.1.0"
description = "A web service that allows you to visualize top starred projects on Github."
authors = ["funkycadet <ericsmithsonian2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "github_stars_visualizer"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
plotly = "^5.11.0"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
