[tool.poetry]
name = "github-stars-visualizer"
version = "0.1.0"
description = "A web service that allows you to visualize top starred projects on Github."
authors = ["funkycadet <ericsmithsonian2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "github_stars_visualizer"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
plotly = "^5.11.0"
flask = "^2.2.2"
sentry-sdk = {extras = ["flask"], version = "^1.11.0"}
sqlalchemy = "^1.4.44"
wheel = "^0.38.4"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
